--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
     />
     <link href="./styles/main.css" rel="stylesheet" />
     <title>Twitter Princesas</title>
@@ -14,10 +20,20 @@
   <body>
     <main class="main">
       <h1 class="title">Twitter Princesas</h1>
+      <div class="favs">
+        <div id="counter" class="counter">
+          <div id="fav-counter" class="fav-counter"></div>
+          <p class="counter-title">Favs</p>
+          <div id="fav-arrow" class="fav-arrow">
+            <i class="fas fa-chevron-down"></i>
+          </div>
+        </div>
+      </div>
       <ul class="js-user-list container">
         <!--render users-->
       </ul>
     </main>
+
     <script src="./js/main.js" type="text/javascript"></script>
   </body>
 </html>
