--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="favs">
         <div id="counter" class="counter">
           <div id="fav-counter" class="fav-counter"></div>
-          <p class="counter-title">Favs</p>
+          <p class="counter-title">0 Favs</p>
           <div id="fav-arrow" class="fav-arrow">
             <i class="fas fa-chevron-down"></i>
           </div>
